[package]
name = "arguman"
version = "0.1.0"
authors = ["mov-rax <csharper.work@gmail.com>"]
edition = "2018"
description = "Command-line argument parsing library"
documentation = "https://github.com/mov-rax/arguman"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
